<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtusername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18dp"
        android:layout_below="@+id/edtusername"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_bg"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/edtpassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:height="50dp"
        android:background="@drawable/bg"
        android:text="@string/sign_in_btn"

        android:textColor="@color/orangereal"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnsignin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="15dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/creataccount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnsignin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/forgotpassword"
        android:text="@string/creat_an_account"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="Or sign in with"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/others"
        android:gravity="center">


        <ImageView
            android:id="@+id/fbsignin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/ggsignin"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/huaweisignin"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/huawei" />
    </LinearLayout>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="2dp"
        android:paddingStart="35dp"
        android:drawableStart="@drawable/ic_baseline_copyright_24"
        android:gravity="center"
        android:text="@string/copyright_by_me"
        android:textColor="@color/white"
        android:textSize="11sp" />


</RelativeLayout>